Adding an exercise emoji to ALL exercises

--- a/src/data/levels/001_Assembly language/001_Now it's your turn/chat/en.yml
+++ b/src/data/levels/001_Assembly language/001_Now it's your turn/chat/en.yml
@@ -2,7 +2,7 @@
 main:
   messages:
   - now it's your turn 😛
-  - make a program that writes the number $7C to the addresses $4055 and $4072
+  - 📚  make a program that writes the number $7C to the addresses $4055 and $4072
   - then, the number $18 to the address $40B8
   - test your program with the ⏩  button
   - when you're ready, close the chat and run the `test` command
