--- a/src/data/levels/001_Assembly language/002_Reading from memory/chat/en.yml
+++ b/src/data/levels/001_Assembly language/002_Reading from memory/chat/en.yml
@@ -88,7 +88,7 @@ exercise:
     });
   messages:
   - let's refactor the code 💡
-  - make it so it uses `ADC` instead of 3 incrementing instructions
+  - 📚  make it so it uses `ADC` instead of 3 incrementing instructions
   - (remember to replace `LDX` and `STX` with `LDA` and `STA`)
   - when you're ready, run the `test` command
   responses: []
