--- a/src/data/levels/001_Assembly language/004_Branching/chat/es.yml
+++ b/src/data/levels/001_Assembly language/004_Branching/chat/es.yml
@@ -90,7 +90,7 @@ exercise:
   messages:
   - el opuesto de `BNE` es `BEQ`, que salta cuando los números son iguales
   - vamos a practicar 👾
-  - borra el código actual
+  - 📚  borra el código actual
   - y construye un programa que lea el valor de $4080
   - si tiene un 7, escribe $EE en $40BF
   - si no, escribe $AA en $40BF
