--- a/src/data/levels/001_Assembly language/005_Addressing modes (1-3)/chat/en.yml
+++ b/src/data/levels/001_Assembly language/005_Addressing modes (1-3)/chat/en.yml
@@ -161,7 +161,7 @@ exercise:
     {{Bottom}}.setSelectedCells([]);
   messages:
   - there we go...
-  - as an exercise, modify the code by adding an `STY $1001` instruction at the end
+  - 📚  as an exercise, modify the code by adding an `STY $1001` instruction at the end
   - then an `INX` instruction
   - and lastly, change lines 10 and 12 so the indirect `JMP` goes directly into the new `INX` 👀
   - when you finish, run the `test` command
