--- a/src/data/levels/001_Assembly language/005_Addressing modes (1-3)/chat/es.yml
+++ b/src/data/levels/001_Assembly language/005_Addressing modes (1-3)/chat/es.yml
@@ -161,7 +161,7 @@ exercise:
     {{Bottom}}.setSelectedCells([]);
   messages:
   - ahí está...
-  - como ejercicio, modifica el código agregando una instrucción `STY $1001` al final
+  - 📚  como ejercicio, modifica el código agregando una instrucción `STY $1001` al final
   - luego una instrucción `INX`
   - y por último, cambia las líneas 10 y 12 para que el `JMP` indirecto vaya directamente a la nueva `INX` 👀
   - cuando termines, ejecuta el comando `test`
