--- a/src/data/levels/001_Assembly language/003_Flags/chat/es.yml
+++ b/src/data/levels/001_Assembly language/003_Flags/chat/es.yml
@@ -110,7 +110,7 @@ exercise:
     });
   messages:
   - yep, está la Bandera Zero, que todas las instrucciones la ponen en 1 cuando el resultado es cero
-  - sin eliminar el código actual, intenta sustraer 4 a [A], con la instrucción `SBC`
+  - 📚  sin eliminar el código actual, intenta sustraer 4 a [A], con la instrucción `SBC`
   - funciona igual que `ADC`, pero resta en lugar de sumar
   - luego de la instrucción, la Bandera Zero debería estar en 1 😊
   - cuando esté listo, ejecuta el comando `test`
