--- a/src/data/levels/003_CPU/002_Flags/chat/en.yml
+++ b/src/data/levels/003_CPU/002_Flags/chat/en.yml
@@ -25,7 +25,7 @@ notall:
 
 what:
   messages:
-  - create a `FlagsRegister` class with 5 boolean properties (called ~c~, ~z~, ~i~, ~v~ and ~n~)
+  - 📚  create a `FlagsRegister` class with 5 boolean properties (called ~c~, ~z~, ~i~, ~v~ and ~n~)
   - initialize them with ```javascript false```
   - then, implement ```javascript getValue()``` and ```javascript setValue(value)``` following the previous table
   - i.e. with ~i~ and ~v~ on, ```javascript getValue()``` should return ```javascript 0b01100100```
