--- a/src/data/levels/003_CPU/004_Insert cartridge/chat/es.yml
+++ b/src/data/levels/003_CPU/004_Insert cartridge/chat/es.yml
@@ -8,7 +8,7 @@ main:
 
 how:
   messages:
-  - crea una clase `NEEES` que reciba los bytes de la ROM (y agrégala a ~/code/index.js~)
+  - 📚  crea una clase `NEEES` que reciba los bytes de la ROM (y agrégala a ~/code/index.js~)
   - tendría que instanciar un nuevo `Cartridge` usando esos bytes, y asignarlo a una propiedad `cartridge`
   - también tendría que instanciar la `CPU`, pasando el cartucho como argumento, y guardarla en una propiedad `cpu`
   - la `CPU` debería pasarle el cartucho al constructor de `CPUMemory`
