--- a/src/data/levels/003_CPU/010_Instructions (1-6) - Arithmetic/chat/es.yml
+++ b/src/data/levels/003_CPU/010_Instructions (1-6) - Arithmetic/chat/es.yml
@@ -16,7 +16,8 @@ howmany:
   messages:
   - son 12 en total, ¡pero ya programé 2 por tí! 😎
   - y algunas de ellas son muy similares
-  - crea un objeto siguiendo el mismo formato que el ejemplo
+  - 📚  crea un objeto siguiendo el mismo formato que el ejemplo
+  - implementa cada una de las 12 instrucciones aritméticas sobre él
   - y expórtalo bajo la clave `instructions` en ~/code/index.js~
   - necesitas documentación acerca de qué debería hacer cada instrucción
   - así que revisa 📄  ~/docs/cpu_instructions.es.md~
