Fixing cpu instructions docs

--- a/src/data/levels/003_CPU/010_Instructions (1-6) - Arithmetic/chat/en.yml
+++ b/src/data/levels/003_CPU/010_Instructions (1-6) - Arithmetic/chat/en.yml
@@ -8,7 +8,7 @@ main:
   - I'll exemplify this by implementing 3 common instructions in a particular format
   - look at your 📄  ~/docs/cpu_example_instructions.js~ file!
   responses:
-  - alright... how many arithmetic instructions are? [howmany]
+  - alright... how many arithmetic instructions are there? [howmany]
 
 howmany:
   messages:
