Testing ROL and ROR

--- a/src/data/levels/000_Getting started/000_Introduction/chat/en.yml
+++ b/src/data/levels/000_Getting started/000_Introduction/chat/en.yml
@@ -74,7 +74,8 @@ woo:
 javascript:
   messages:
   - that'll work perfect
-  - but you also need basic understanding of computer systems
+  - but you also need some object-oriented programming knowledge
+  - and basic understanding of computer systems
   - (bytes, signed integers, boolean logic, numbering systems, etc.)
   responses:
   - ok, let's do this [end]
