--- a/src/data/levels/000_Getting started/000_Introduction/chat/es.yml
+++ b/src/data/levels/000_Getting started/000_Introduction/chat/es.yml
@@ -74,7 +74,8 @@ woo:
 javascript:
   messages:
   - eso va a funcionar
-  - pero también necesitas conocimientos básicos de sistemas informáticos
+  - pero también necesitas saber algo de programación orientada a objetos
+  - y conocimientos básicos de sistemas informáticos
   - (bytes, enteros con signo, lógica booleana, sistemas de numeración, etc.)
   responses:
   - ok, hagámoslo [end]
