Adding data instructions docs

--- a/src/data/levels/003_CPU/009_Little Endian/chat/es.yml
+++ b/src/data/levels/003_CPU/009_Little Endian/chat/es.yml
@@ -5,7 +5,7 @@ main:
   - p. ej. cuando una instrucción de CPU tiene una dirección de 16 bits como argumento
   - o al usar la instrucción `RTS` y la CPU tiene que restaurar [PC] desde la pila
   - en estos casos, se usa la convención <Little Endian> 🔌
-  - "eso significa: el byte menos significativo (\"low byte\") se guarda primero, luego el más significativo (\"high byte\")"
+  - "eso quiere decir: el byte menos significativo (\"low byte\") se guarda primero, luego el más significativo (\"high byte\")"
   - |-
     📚  implementa este método en `CPUMemory`:
     **read16(address)**:
