--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "jszip": "^3.10.1",
     "lodash": "^4.17.21",
     "marked": "^4.2.3",
+    "mixpanel-browser": "^2.45.0",
     "nes-emu": "^1.0.3",
     "npm": "^8.19.2",
     "path-browserify": "^1.0.1",
