Adding arithmetic help

--- a/src/data/levels/001_Assembly language/004_Branching/chat/en.yml
+++ b/src/data/levels/001_Assembly language/004_Branching/chat/en.yml
@@ -97,7 +97,7 @@ exercise:
   - then, run the `test` command
   responses:
   - wait, how do I test this? 🧪 [testing]
-  - I need help [help]
+  - I need help 😅 [help]
 
 testing:
   messages:
