Adding checks test

--- a/src/data/levels/003_CPU/012_Instructions (3-6) - Checks/chat/en.yml
+++ b/src/data/levels/003_CPU/012_Instructions (3-6) - Checks/chat/en.yml
@@ -1,5 +1,10 @@
 ---
 main:
   messages:
-  - coming soon!
+  - there are only 4 checks
+  - they are, basically, instructions that compare values with a register
+  - I don't think you will need help with these
+  - 📚  implement all the check instructions in your `instructions` object!
+  run-after-messages: |
+    store.dispatch.savedata.openFile("/docs/cpu_instructions.en.md");
   responses: []
