Finishing Checks and merging Logical into them

--- a/src/data/levels/003_CPU/012_Instructions (3-5) - Checks/chat/en.yml
+++ b/src/data/levels/003_CPU/012_Instructions (3-5) - Checks/chat/en.yml
@@ -1,8 +1,8 @@
 ---
 main:
   messages:
-  - there are only 4 checks
-  - they are, basically, instructions that compare values with a register
+  - there are only a few checks
+  - they are, basically, instructions that compare values with a register or perform logical operations
   - I don't think you will need help with these
   - 📚  implement all the check instructions in your `instructions` object!
   run-after-messages: |
