--- a/src/data/levels/003_CPU/014_Instructions (4-5) - Branching/chat/en.yml
+++ b/src/data/levels/003_CPU/014_Instructions (4-5) - Branching/chat/en.yml
@@ -2,7 +2,7 @@
 main:
   messages:
   - branching means changing the value of `[PC]` (the Program Counter)
-  - and that's what most of these instructions do
+  - and that's what all these instructions do
   - 📚  implement all the branching instructions in your `instructions` object!
   run-after-messages: |
     store.dispatch.savedata.openFile("/docs/cpu_instructions.en.md");
