--- a/src/data/levels/003_CPU/014_Instructions (4-5) - Branching/chat/es.yml
+++ b/src/data/levels/003_CPU/014_Instructions (4-5) - Branching/chat/es.yml
@@ -2,7 +2,7 @@
 main:
   messages:
   - las bifurcaciones implican cambiar el valor de `[PC]` (el "Program Counter")
-  - y eso es lo que la mayoría de estas instrucciones hacen
+  - y eso es lo que todas estas instrucciones hacen
   - 📚  ¡implementa todas las instrucciones de bifurcaciones en tu objeto `instructions`!
   run-after-messages: |
     store.dispatch.savedata.openFile("/docs/cpu_instructions.es.md");
