--- a/src/data/levels/003_CPU/004_Memory/chat/es.yml
+++ b/src/data/levels/003_CPU/004_Memory/chat/es.yml
@@ -37,10 +37,10 @@ implement:
   - |-
     implementa estos dos métodos:
     **read(address)**:
-      __si <address> está dentro de $0000-$07FF, retorna el byte de <ram>
-      si <address> está dentro de $0800-$1FFF, retorna un byte espejado de <ram>
+      __-> si <address> está dentro de $0000-$07FF, retorna el byte de <ram>
+      -> si <address> está dentro de $0800-$1FFF, retorna un byte espejado de <ram>
         (por ej. $0802 se vuelve $0002, $1023 se vuelve $0023)
-      caso contrario, retorna 0__
+      -> caso contrario, retorna 0__
     **write(address, value)**:
       __similar a *read*, pero escribe el <value> en lugar de retornar__
   - |-
