--- a/src/data/levels/003_CPU/015_Instructions (5-5) - System/chat/en.yml
+++ b/src/data/levels/003_CPU/015_Instructions (5-5) - System/chat/en.yml
@@ -25,7 +25,7 @@ example:
   messages:
   - sure! imagine you're a game
   - you need to move your sprites when the PPU finishes drawing its current frame
-  - to avoid doing it while it draws, causing glitches ⚠️
+  - to avoid doing it while it draws (causing glitches 💥 )
   - so, you put your sprite moving code in -for example- address $90CC
   - that will be the location of your <interrupt handler>
   - and then you "subscribe" to the <NMI> event by placing a pointer to $90CC in <NMI>'s vector (which is $FFFA/B)
@@ -35,13 +35,13 @@ example:
 
 nmi:
   messages:
-  - "when the <NMI> is triggered, the CPU will:"
+  - "in this example, when the <NMI> is triggered, the CPU will:"
   - 🧱  push [PC] and the flags onto the stack
   - 🏁  set ~I=1~, which disables user interrupts
   - 🧱  grab the value $90CC by reading $FFFA and $FFFB (<NMI>'s vector)
   - 🦘  jump to $90CC
   - 🚲  consume 7 cycles while doing all this
-  - then, the interrupt handler will move the sprites and call `RTI` ("Return from Interrupt") to restore the previous state
+  - then, the interrupt handler will move the sprites and run `RTI` ("Return from Interrupt") to restore the previous state
   responses:
   - (*) what about the 7-cycle stuff? 🚲 [cycle]
   - (*) what's the purpose of the I flag? 🏁 [iflag]
@@ -78,8 +78,8 @@ implement:
     **interrupt(interrupt, withBFlag = false)**:
       __-> if interrupt.id === "IRQ" and I=1, returns 0
         (the interrupt is ignored)
-      -> pushes [PC] to the stack
-      -> pushes the flags to the stack
+      -> pushes [PC] onto the stack
+      -> pushes the flags onto the stack
         (if <withBFlag> is true, the flags byte should have bit 4 on)
       -> increments 7 cycles (this.cycles += 7)
       -> sets I=1 in the flags register
